#290: Upgrade dependencies (#292)