@@ -8,7 +8,7 @@ import static org.junit.jupiter.api.Assertions.assertThrows;
 import java.io.IOException;
 import java.io.UncheckedIOException;
 import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
 import java.nio.file.Files;
 import java.nio.file.Path;
 
@@ -39,11 +39,11 @@ class UrlDownloaderTest {
     // [utest->dsn~install-custom-slc.url~1]
     @Test
     void downloadFromValidUrl() throws IOException {
-        download("https://httpbin.org/html");
-        assertThat(Files.readString(targetPath), containsString("Herman Melville"));
+        download("https://example.com");
+        assertThat(Files.readString(targetPath), containsString("This domain is for use in documentation examples without needing permission"));
     }
 
     private void download(final String url) throws MalformedURLException {
-        new UrlDownloader().download(new URL(url), targetPath);
+        new UrlDownloader().download(URI.create(url).toURL(), targetPath);
     }
 }
